TP8-K8S-MYSQL/K8S_deployment-mysql/ms-bourse-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-bourse-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-bourse-mysql-pod
  template:
    metadata:
      labels:
        app: ms-bourse-mysql-pod
    spec:
      containers:
        - name: ms-bourse-mysql-container
          image: ms-bourse-mysql-image
          ports:
            - containerPort: 8083
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ms-bourse-mysql-srv
spec:
  selector:
    app: ms-bourse-mysql-pod
  ports:
    - port: 7083
      targetPort: 8083
      protocol: TCP
  type: LoadBalancer
